exports[`mutations should addEntry 1`] = `
Object {
  "motor": 2,
  "participations": Array [
    Object {
      "boat": Object {
        "id": "1235",
      },
      "user": Object {
        "id": "1234",
      },
    },
  ],
  "sailed": 1,
  "text": "entry text",
}
`;

exports[`mutations should create a new group 1`] = `
Object {
  "data": Object {
    "group1": Object {
      "boats": Array [],
      "is_club": true,
      "members": Array [
        Object {
          "name": null,
        },
      ],
      "name": "Group 1",
    },
    "group2": Object {
      "boats": Array [],
      "is_club": false,
      "members": Array [
        Object {
          "name": null,
        },
      ],
      "name": "Group 1",
    },
  },
}
`;

exports[`query it should query me 1`] = `
Object {
  "data": Object {
    "me": Object {
      "email": "test@test.de",
    },
  },
}
`;

exports[`query should fetch all groups 1`] = `
Object {
  "data": Object {
    "groups": Array [
      Object {
        "is_club": true,
        "name": "club 1",
      },
      Object {
        "is_club": false,
        "name": "club 2",
      },
    ],
  },
}
`;
